--- a/app/src/main/res/layout/item_planet.xml
+++ b/app/src/main/res/layout/item_planet.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/iv_planet"
                 android:layout_width="50sp"
                 android:layout_height="50sp"
-                android:src="@drawable/ic_planet_dark_24dp"
+                android:src="@drawable/ic_planet_dark"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"/>
 
