--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -4,16 +4,15 @@
     android:layout_height="match_parent"
     android:background="@color/gray_background">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_characters"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
-
     <ProgressBar
         android:id="@+id/progress_characters"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_characters"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
