--- a/app/src/main/res/layout/fragment_planets.xml
+++ b/app/src/main/res/layout/fragment_planets.xml
@@ -4,16 +4,23 @@
     android:layout_height="match_parent"
     android:background="@color/gray_background">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_planets"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
-
     <ProgressBar
         android:id="@+id/progress_planets"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_planets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <ProgressBar
+        android:id="@+id/progress_planets_load_more"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:visibility="gone"/>
 
 </LinearLayout>
